# quetzal

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  index.html  quetzal.doap
css/: project.css  style.css
data/: Makefile.am  com.github.badwolfie.quetzal.gschema.xml  io.github.badwolfie.quetzal.gschema.xml  quetzal.desktop.in  quetzal.gresource.xml
data/icons/256x256/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
inc/: .gitignore  bdw-utils.h
po/: POTFILES.in  es.po
src/: Makefile.am  main.c  qt-application.c  qt-application.h  qt-appwindow.c  qt-appwindow.h  qt-document.c  qt-document.h  qt-documentbar.c  qt-documentbar.h  qt-headerbar.c  qt-headerbar.h  qt-sourceview.c  qt-sourceview.h  qt-tabbar.c  qt-tabbar.h  qt-text-editor.c  qt-text-editor.h  quetzal-application.c  quetzal-application.h  quetzal-appwindow.c  quetzal-appwindow.h  quetzal-headerbar.c  quetzal-headerbar.h  quetzal-texteditor.c  quetzal-texteditor.h  quetzal.c  quetzal.h
